<resources>
    <string name="app_name">Bul Biletini</string>
    <string name="home">Ana Sayfa</string>
    <string name="favourites">Favoriler</string>
    <string name="messages">Mesajlar</string>
    <string name="settings">Ayarlar</string>
    <string name="cancel">İptal</string>
    <string name="done">Tamam</string>
    <string name="error">Hata</string>
    <string name="buy_tariff">Tarife Satın Al</string>
    <string name="update_account_info">Hesap Bilgilerimi Güncelle</string>
    <string name="my_adverts">İlanlarım</string>
    <string name="adverts">İlanlar</string>
    <string name="comments">Yorumlarım</string>
    <string name="dopings">Tarifelerim</string>
    <string name="be_safe_user">Güvenli Kullanıcı Ol</string>
    <string name="blocked_users">Engellenen Kullanıcılar</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="delete_account">Hesabı Sil</string>
    <string name="approved_user">Onaylı Kullanıcı</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="showcase">Vitrin</string>
    <string name="teams">Takımlar</string>
    <string name="see_all">Tümünü Gör</string>
    <string name="tickets">Biletler</string>
    <string name="ticket_detail">Bilet Detayı</string>
    <string name="stadium_plan">Stad Yerleşimi</string>
    <string name="notify_advert">İlanı Bildir</string>
    <string name="no_favourite_teams">Favori listenizde takım yok.</string>
    <string name="no_favourite_ticket">Favori listenizde bilet yok.</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="email">E-mail</string>
    <string name="password">Parola</string>
    <string name="new_password">Yeni Parola</string>
    <string name="password_again">Parola Tekrar</string>
    <string name="date_of_birth">Doğum Tarihi</string>
    <string name="phone">Telefon</string>
    <string name="register">Kayıt Ol</string>
    <string name="login">Giriş Yap</string>
    <string name="change_password">Şifreyi Değiştir</string>
    <string name="change_profile">Profil Fotoğrafını Değiştir</string>
    <string name="verification_code">Doğrulama Kodu</string>
    <string name="get_verification_code">Doğrulama Kodu Al</string>
    <string name="send_code">Kod Gönder</string>
    <string name="forgot_password_description">Mailinize gönderilen kodu giriniz ve yeni parolanızı belirleyiniz.</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="internet_connection_problem">Internet connection error!</string>
    <string name="tl_format">%1$s ₺</string>
    <string name="upcoming_matches">Yaklaşan Maçlar</string>
    <string name="empty_match">Yaklaşan maç bulunamadı.</string>
    <string name="empty_ticket">Bilet bulunamadı.</string>
    <string name="create_ticket">Bilet Oluştur</string>
    <string name="tribune">Tribün</string>
    <string name="block">Blok</string>
    <string name="order">Sıra</string>
    <string name="select_match">Maç Seç</string>
    <string name="select_tariff">Tarife Seç</string>
    <string name="price">Fiyat</string>
    <string name="description">Açıklama</string>
    <string name="select">Seç</string>
    <string name="tariffs">Tarifeler</string>
    <string name="price_empty_warning">Fiyat boş geçilemez.</string>
    <string name="app_exit">Uygulamadan çıkmak istiyor musunuz?</string>
    <string name="name_empty_error">İsim alanı boş geçilemez.</string>
    <string name="surname_empty_error">Soyisim alanı boş geçilemez.</string>
    <string name="user_name_empty_error">Kullanıcı adı alanı boş geçilemez.</string>
    <string name="password_empty_error">Şifre alanı boş geçilemez.</string>
    <string name="mail_empty_error">Mail alanı boş geçilemez.</string>
    <string name="match_empty_error">Maç alanı boş geçilemez.</string>
    <string name="tariff_empty_error">Tarife alanı boş geçilemez.</string>
    <string name="tribune_empty_error">Tribün alanı boş geçilemez.</string>
    <string name="block_empty_error">Blok alanı boş geçilemez.</string>
    <string name="order_empty_error">Sıra alanı boş geçilemez.</string>
    <string name="password_again_empty_error">Şifrenizi tekrar girmelisiniz.</string>
    <string name="passwords_not_match">Şifreler birbirleriyle eşleşmiyor.</string>
    <string name="count_format">%1$s adet</string>
    <string name="my_tariffs">Tarifelerim</string>
    <string name="call_user">Kullanıcıyı Ara</string>
    <string name="send_message">Kullanıcıya Mesaj Gönder</string>
    <string name="shared_adverts">Paylaştığı İlanlar</string>
    <string name="send_message_with_whatsapp">Whatsapp\'tan Mesaj Gönder</string>
    <string name="user_comments">Kullanıcı Yorumları</string>
    <string name="add_comment">Yorum Ekle</string>
    <string name="block_user">Kullanıcıyı Engelle</string>
    <string name="unblock_user">Kullanıcı Engeli Kaldır</string>
    <string name="message">Mesaj</string>
    <string name="send">Gönder</string>
    <string name="comment_added_successful">Başarıyla yorum eklendi.</string>
    <string name="ticket_notified_successful">Başarıyla ilan bildirildi.</string>
    <string name="rate_added_successful">Başarıyla kullanıcı oylandı.</string>
    <string name="rate_user">Kullanıcıyı Oyla</string>
    <string name="please_install_whatsapp">Önce Whatsapp\'ı kurmalısınız.</string>
    <string name="message_template">Biletle ilgileniyorum. Yardımcı olabilir misiniz?</string>
    <string name="not_comment_in_profile">Profil için yorum bulunamadı.</string>
    <string name="no">Hayır</string>
    <string name="yes">Evet</string>
    <string name="are_you_sure_want_to_block_user">Kullanıcıyı engellemek istediğinizden emin misiniz?</string>
    <string name="are_you_sure_want_to_unblock_user">Kullanıcının engelini kaldırmak istediğinizden emin misiniz?</string>
    <string name="user_blocked">Kullanıcı engellendi!</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="warning">Uyarı</string>
    <string name="close">Kapat</string>
    <string name="successfully_added_favourites">Başarıyla favorilere eklendi</string>
    <string name="successfully_updated_profile_photo">Profil fotoğrafı güncellendi.</string>
    <string name="successfully_removed_favourites">Başarıyla favorilerden kaldırıldı</string>
    <string name="successfully_created_ticket">Başarıyla bilet oluşturuldu.</string>
    <string name="user_blocked_remove">Kullanıcı engeli kaldırıldı.</string>
    <string name="successfully_updated_account_info">Hesap bilgileri başarıyla güncellendi.</string>
    <string name="successfully_changed_password">Parola başarıyla değiştirildi.</string>
    <string name="commented_user">%1$s kullanıcısına yaptığın yorumlar</string>
    <string name="share_ticket">Bilet Paylaş</string>
    <string name="download">İndir\n</string>
    <string name="new_version_available">Yeni bir versiyon mevcut!</string>
    <string name="new_version_title">Zorunlu Güncelleme</string>
    <string name="tariff_buy_success">Tarife başarıyla alındı.</string>
    <string name="success">Başarılı</string>
    <string name="sign_in_with_google">Google ile Giriş Yap</string>
    <string name="send_suggestion_and_complaint">Talep ve Şikayet Gönder</string>
    <string name="successfully_sended_suggestion">Önerin başarıyla tarafımıza ulaştı. Uygulamayı senin için daha iyi hale getirmek üzere çalışıyor olacağız.</string>
    <string name="i_have_read_usage_conditions">Kullanıcı sözleşmesini okudum, kabul ediyorum.</string>
    <string name="not_checked_usage_conditions">Kullanıcı sözleşmesini onaylayınız.</string>
    <string name="user_aggreement">Kullanıcı Sözleşmesi</string>
    <string name="must_read_user_agreement">Kullanıcı sözleşmesini okuyunuz.</string>
    <string name="this_feature_next_version">Bu özellik yakında kullanımda olacaktır.</string>
    <string name="edit_ticket">Bilet Düzenle</string>
    <string name="edit">Düzenle</string>
    <string name="please_enter_price">Lütfen fiyat giriniz.</string>
    <string name="please_enter_description">Lütfen açıklama giriniz.</string>
    <string name="ticket_edited_successful">Bilet başarıyla düzenlendi.</string>
</resources>