<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <com.alparslanturk.biletdevret.custom.ApplicationToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSurname"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/surname"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/user_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:endIconDrawable="@drawable/show_password_selector"
            app:endIconMode="password_toggle"
            app:endIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:endIconDrawable="@drawable/show_password_selector"
            app:endIconMode="password_toggle"
            app:endIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password_again"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:height="60dp"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/lato_bold"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>